# Ollash

./: .agent_memory.json  .bandit  .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_PIPELINE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  COWORK_IMPROVEMENTS.md  DOCKER_USAGE.md  Dockerfile  ESLINT_SOLUTION.md  GEMINI.md  GITHUB_UPLOAD_STEPS.md  KNOWLEDGE_WORKSPACE_GUIDE.md  Makefile  PROACTIVE_AUTOMATION_SYSTEM.md  README.md  README_GITHUB.md  SECURITY.md  all_tests_results.txt  auto_agent.py  auto_benchmark.py  benchmark.py  benchmark_run_instructions.txt  clarification_for_ollama.txt  debug_image_generation.py  docker-compose.yml  eslint.config.js  explore_api.py  final_benchmark_run_command.txt  final_debug.py  final_test_run.txt  (+41 more)
.cache/fragments/: .fragment_cache.json
.cache/knowledge/: .error_patterns.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  prompt-ci.yml
.ollash/: .agent_memory.json  .env.invoke_ui  logs.db  system.db
backend/: README.md
config/: agent_features.json  alerts.json  auto_benchmark_tasks.json  automation_templates.json  benchmark_tasks.json  llm_models.json  settings.json  tasks.json  tool_settings.json
docs/: CLAUDE.md  CLI_REFERENCE.md  DEPLOYMENT_STATUS.md  GEMINI.md  PROJECT_STRUCTURE.md
examples/: EXAMPLES_INTEGRATION.py  demo_automations.py  demo_phase1_phase2.py  image_generator_examples.py  show_improvements.py
frontend/: README.md  app.py  middleware.py
legacy/: auto_agent.py  auto_benchmark.py  run_agent.py
plugins/: __init__.py
prompts/: README.md
reports/: test_rag_results.txt  test_results.txt  test_summary.txt
scripts/: benchmark.py  explore_api.py  final_debug.py  run_scenarios_batch.py  validate_prompts.py
src/: __init__.py
tests/: README.md  README_STRUCTURE.md  check_invoke_ui.py  conftest.py  final_test_script.py  img2img_test_script.py  run_tests.bat  run_tests.sh  test_auto_agent.py  test_code_agent_integration.py  test_core_utilities.py  test_final.py  test_image_generator.py  test_img2img.py  test_main.py  test_network_discovery.py  test_new_features.py  test_new_user_cases.py  test_ollama_integration.py  test_phase5_multimodal.py  test_poker_generation.py  test_web.py
(+1372 files in other folders)
